# gym-envs-rhoban

./: LICENSE  README.md  pyproject.toml  todo.txt
gym_envs_rhoban/: __init__.py
gym_envs_rhoban/base/: __init__.py  base_env.py  goal_env_mixin.py  pybullet_base_env.py
gym_envs_rhoban/gym_panda/: __init__.py
gym_envs_rhoban/gym_panda/envs/: __init__.py  panda_joint_reach_env.py  panda_reach_env.py
gym_envs_rhoban/gym_rr100/: __init__.py
gym_envs_rhoban/gym_rr100/envs/: __init__.py  ackermann_goal_env.py  ackermann_rr100_env.py  rr100_env.py  rr100_goal_env.py
gym_envs_rhoban/gym_rr100/wrappers/: __init__.py  car_reward_wrapper.py  exp_angle_reward_wrapper.py  fastrlap_wrapper.py  fastrlap_wrapper_no_trunc.py  fastrlap_wrapper_old.py  linear_angle_reward_wrapper.py  square_angle_reward_wrapper.py  tcheby_reward_wrapper.py  terminate_if_out_of_bounds.py  truncate_if_out_of_bounds.py  truncate_if_out_of_bounds_wrapper.py
gym_envs_rhoban/gym_ur_rr/: __init__.py
gym_envs_rhoban/gym_ur_rr/envs/: __init__.py  ur_rr_env.py
gym_envs_rhoban/gym_ur_rr/wrappers/: __init__.py  fan_reward_wrapper.py  truncate_if_out_of_bounds_wrapper.py  y_offset_reward_wrapper.py
gym_envs_rhoban/urdf/: my_cube.urdf  my_lego.urdf  my_sphere.urdf  my_table.urdf  obstacle_sphere.urdf
gym_envs_rhoban/urdf/RR100/: rr100.urdf  rr100_ur.back
gym_envs_rhoban/urdf/UR5_RR100/: rr100_ur.urdf
gym_envs_rhoban/utils/: __init__.py
tests/gym_rr100/: test_env.py  test_env_joint.py  test_env_manual.py  test_fastrlap.py  test_fastrlap_no_trunc.py  test_heading_reward.py
(+21 files in other folders)
