[build-system]
requires = ["hatchling", "  "]
build-backend = "hatchling.build"

[project]
name = "gym_envs_rhoban"
version = "0.0.1"
authors = [
    { name = "Kohio DEFLESSELLE", email = "kohio.deflesselle@u-bordeaux.fr" },
]
description = "Gymnasium environments"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Soralsei/gym-envs-rhoban"
Issues = "https://github.com/Soralsei/gym-envs-rhoban/issues"
